--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .fw-600{
     font-weight: 600;
 }
+.bg_brown{
+    background-color: #6e4343 !important;
+}
+.pagination_numbers .mdc-text-field{
+    color: white !important;
+    border: 1px solid white;
+}
+.pagination_numbers span{
+    color:white !important;
+}
 @media (min-width: 480px) {
 .fs-14 {
     font-size: 30px;
